--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "zilkara",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vercel dev",
-    "start": "vercel dev",
-    "lint": "node -e \"console.log('ok')\""
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "vercel-build": "next build",
+    "lint": "next lint"
   },
   "dependencies": {
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "@upstash/redis": "^1.36.2",
-    "@vercel/kv": "^3.0.0",
-    "next": "^16.1.6",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "@vercel/kv": "^3.0.0"
   }
 }
