--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "zilkara",
-  "version": "1.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "vercel-build": "next build",
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "@upstash/redis": "^1.36.2",
-    "@vercel/kv": "^3.0.0",
-    "next": "^14.2.35",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@vercel/kv": "^3.0.0"
   }
 }
