fix: convert project to proper nextjs runtime

--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "zilkara",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "next": "14.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@upstash/redis": "^1.36.2",
-    "@vercel/kv": "^3.0.0"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "@upstash/redis": "^1.36.2"
   }
 }
