--- a/rfs-crypto-v1/package.json
+++ b/rfs-crypto-v1/package.json
@@ -13,8 +13,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.0.0"
+    "@types/node": "^20.19.33",
+    "@types/react": "^18.3.28",
+    "typescript": "^5.9.3"
   }
 }
