--- a/rfs-crypto-v1/package.json
+++ b/rfs-crypto-v1/package.json
@@ -2,19 +2,31 @@
   "name": "zilkara",
   "version": "1.0.0",
   "private": true,
+  "description": "Zilkara — Professional crypto market scanner with real-time scoring and API endpoints",
+  "author": "Yannick Therand",
+  "license": "UNLICENSED",
+
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
-    "start": "next start"
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
+
   "dependencies": {
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
+
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.0.0"
+    "typescript": "^5.4.0",
+    "@types/node": "^20.11.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0"
+  },
+
+  "engines": {
+    "node": ">=18.18.0"
   }
 }
