--- a/package.json
+++ b/package.json
@@ -2,15 +2,31 @@
   "name": "zilkara",
   "version": "1.0.0",
   "private": true,
+  "description": "Zilkara — Professional crypto market scanner with real-time scoring and API endpoints",
+  "author": "Yannick Therand",
+  "license": "UNLICENSED",
+
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
+
   "dependencies": {
     "next": "14.2.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "@upstash/redis": "^1.36.2"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+
+  "devDependencies": {
+    "typescript": "^5.4.0",
+    "@types/node": "^20.11.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0"
+  },
+
+  "engines": {
+    "node": ">=18.18.0"
   }
 }
