--- a/package.json
+++ b/package.json
@@ -5,27 +5,25 @@
   "description": "Zilkara — Professional crypto market scanner with real-time scoring and API endpoints",
   "author": "Yannick Therand",
   "license": "UNLICENSED",
-
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
-
   "dependencies": {
+    "@upstash/ratelimit": "^2.0.8",
+    "@vercel/kv": "^3.0.0",
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
-
   "devDependencies": {
-    "typescript": "^5.4.0",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0"
+    "@types/react-dom": "^18.2.0",
+    "typescript": "^5.4.0"
   },
-
   "engines": {
     "node": ">=18.18.0"
   }
