install @vercel/kv

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/kv": "^3.0.0",
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -16,5 +17,3 @@
     "node": ">=18.18.0"
   }
 }
-
-
